# vGen-OKX

./: .gitignore
mexc-bot/: .env.example  HIRUSHA_GUIDE.md  PROJECT_STATUS.md  pyproject.toml  requirements.txt
mexc-bot/config/: .env.example  config.yaml  config_5m_v3.yaml  config_5m_v4.yaml  config_5m_v5.yaml  config_rsi_wt.yaml  config_volume.yaml  config_volume_20x.yaml  config_volume_farmer.yaml  config_volume_farmer_bb_tuned.yaml  config_volume_farmer_optimal.yaml  config_volume_farmer_rsi_wt.yaml
mexc-bot/data/: paper_session_5m_state.json  paper_session_state.json  volume_farmer_state.json  volume_farmer_state_micro_momentum_backup.json
mexc-bot/data/data/: volume_farmer_optimal_state.json
mexc-bot/data/historical/: BTC_USDT_15m.parquet
mexc-bot/docs/: TELEGRAM_SETUP.md
mexc-bot/scripts/: _launch_optimal_farmer.sh  backtest_volume_farmer.py  download_data.py  live_diagnostic.py  run_backtest.py  run_dashboard.py  run_live.py  run_paper.py  run_volume_farmer.py
mexc-bot/src/backtest/: engine.py  metrics.py
mexc-bot/src/data/: storage.py
mexc-bot/src/exchange/: __init__.py  mexc_client.py  rate_limiter.py  security.py
mexc-bot/src/execution/: live_broker.py  live_volume_executor.py  order_manager.py  paper_broker.py  paper_session.py  volume_farmer.py
mexc-bot/src/monitoring/: chart_generator.py  dashboard.py  dashboard_app.py  logger.py  (+1 more)
mexc-bot/tests/: test_cipher_confluence.py  test_indicators.py  test_mexc_client_orders.py  test_paper_broker.py  test_paper_session.py  test_security.py  test_strategy.py  test_volume_farmer.py
(+144 files in other folders)
