[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mexc-bot"
version = "0.1.0"
description = "Production-oriented MEXC futures Bollinger mean reversion bot scaffold"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
